<resources>
    <string name="app_name">Озвучивание ИК маяков</string>
    <string name="setdevice_tittle">Выберите устройство</string>
    <string name="analizator_tittle">Сканер</string>
    <string name="navigation_drawer_open">Открыть</string>
    <string name="navigation_drawer_close">Закрыть</string>
    <string name="navigation_drawer_header_title">Заголовок</string>
    <string name="navigation_drawer_header_subtitle">Подзаголовок</string>
    <string name="action_settings">Настройки</string>
    <string name="alert_about_tittle">Описание</string>
    <string name="alert_about_ok">Ок</string>
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!--  prefence keys, no translation needed  -->
    <string name="msg_not_connected">Не подключено</string>
    <string name="msg_connecting">Подключение…</string>
    <string name="msg_connected">Подключено</string>
    <string name="action_bluetooth">Подключить</string>
    <string name="no_bt_support">Ваше устройство не поддерживает Bluetooth.</string>
    <string name="empty_device_name">Новое устройство</string>
    <string name="menu_send">Отправить лог…</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_clear">Очистить лог</string>
    <string name="search_dialog_title">Выбрать устройство</string>
    <string name="select_device">Выбратьвустройство</string>
    <string name="search_message">Найти устройства поблизости…</string>
    <string name="title_paired_devices">Известные устройства</string>
    <string name="title_other_devices">Другие устройства</string>
    <string name="none_paired">Нет известных устройств</string>
    <string name="none_found">Не найдено</string>
    <string name="command_hint">Введите команду здесь</string>
    <string name="button_send">Отправить</string>
    <!--  Настройки  -->
    <string name="log_settings_category">История команд:</string>
    <string name="log_time">Время сообщения:</string>
    <string name="log_time_summary">Показывать время в логе</string>
    <string name="log_direction">Направление команд</string>
    <string name="log_direction_summary">Показывать направление в логе</string>
    <string name="commands_mode">Режим приема:</string>
    <string name="commands_mode_summary">Выберите режим приема</string>
    <string name="commands_ending_summary">Выберите окончание строки</string>
    <string name="need_clean">Очистите предыдущую команду</string>
    <string name="need_clean_summary">Очистить</string>
    <string name="loading">Загрузка…</string>
    <string name="pref_log_enable">pref_log_enable</string>
    <string name="log_enable_summary">Показывать лог на главном экране</string>
    <string name="pref_log_show_title">Показывать лог</string>
    <string name="last_update_summary">Нажмите, чтобы проверить обновление:</string>
    <string name="last_updatr_title">Последнее обновление:</string>
</resources>
