<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Режим ввода команд -->
    <PreferenceCategory android:title="@string/commands_mode">
        <ListPreference
            android:defaultValue="ASCII"
            android:dialogTitle="@string/commands_mode"
            android:enabled="false"
            android:entries="@array/commands_mode"
            android:entryValues="@array/commands_mode"
            android:key="@string/pref_commands_mode"
            android:summary="@string/commands_mode_summary" />

    </PreferenceCategory>

    <!-- История команд -->
    <PreferenceCategory android:title="@string/log_settings_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_log_enable"
            android:summary="@string/log_enable_summary"
            android:title="@string/pref_log_show_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_log_timing"
            android:summary="@string/log_time_summary"
            android:title="@string/log_time" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/pref_log_direction"
            android:summary="@string/log_direction_summary"
            android:title="@string/log_direction" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/last_update_summary">

        <Preference
            android:defaultValue="none"
            android:editable="false"
            android:key="edit_text_preference_2"
            android:selectAllOnFocus="true"
            android:summary="@string/last_update_summary"
            android:title="@string/last_updatr_title"
            android:visibility="visible" />

    </PreferenceCategory>

</PreferenceScreen>