<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/stat_sys_data_bluetooth"
        android:title="@string/action_bluetooth"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:title="@string/menu_clear" />

    <item
        android:id="@+id/menu_send"
        android:icon="@android:drawable/ic_menu_send"
        android:orderInCategory="100"
        android:title="@string/menu_send" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        android:visible="true"
        app:showAsAction="always" />
</menu>